somehow fixed bug with "Create Encounter" button appearing not to be re-enabled on iOS Safari 4.2.1

--- a/core/css/tabcat.css
+++ b/core/css/tabcat.css
@@ -233,10 +233,6 @@ form.big button[type=submit] {
     border-width: 5px;
 }
 
-#encounter p {
-    margin: 10px;
-}
-
 #createEncounterForm label {
     width: 170px;
 }
